Update docker container for traps
Regarding docker container, now you can execute it with no definition of
sensors array, and it will not do polling on any sensor. If you want
monitor to listen in a given port for snmp traps, you have to use
variable TRAPS_PORT=162 (or whatever port you want)

--- a/docker/release/config.json.env
+++ b/docker/release/config.json.env
@@ -14,6 +14,7 @@
     "kafka_broker": "${KAFKA_BROKERS}",
     "kafka_topic": "${KAFKA_TOPIC}",
     "kafka_timeout": 2,
+    ${snmp_traps_config}
   },
-  "sensors":[${SENSORS_ARRAY}]
+  ${sensors}
 }
