Add valgrind test with make memchecks
Changes to test framwork
========================
Test framework pytest now is able to call rb_monitor under valgrind. We
develop a new fixture and class, valgrind handler, that will handle
valgrind child if it's called, and will merge all valgrind outputs.

Also, child fixture needs to be scoped session, since valgrind handler
will use it ande it needs to be scoped session for XML output joining.

Monitor child will wait for the first monitor message, since if we send
the SIGINT signal too quickly, valgrind (not monitor) will receive it
and it will be a premature exit.

Message assertions will be done with floats pytest approx(), since
valgrind handles floats different and we have different results.

Changes to docker containers
============================
In dockerfiles, valgrind is now download from edge/main repo, since
version 1.12 contains a bug that doesn't handle musl forks. Also,
musl-dbg is now download for clarity of valgrind leaks.

Others
======
FIX: memchecks tried to call all checks in Makefile
Expand valgrind.suppressions with last musl & librdkafka known bugs
Circleci now will pass memchecks in coverage & production code

FV

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -125,6 +125,7 @@ jobs:
           ./configure --bootstrap
           make
           make checks
+          make memchecks
 
   # Test with assertions on
   assertions:
@@ -147,6 +148,7 @@ jobs:
           ./configure --bootstrap --disable-optimization --enable-coverage
           make
           make checks
+          make memchecks
           make coverage
 
 #
