--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,7 +49,7 @@ load_docker_images:
     # Keep in sync the summary generation with save_docker_images
     run: |
       if [[ -f docker-cache/built-images.tgz ]]; then
-        zcat docker-cache/built-images.tgz | docker load;
+        docker load --input docker-cache/built-images.tgz;
         docker images --filter "dangling=false" --format '{{.ID}} {{.Repository}} {{.Tag}}' | sort > docker-cache/built-images.sum
       else
         echo "NO DOCKER CACHE";
